<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language_preference"
            app:title="@string/language"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/information_header">
        <CheckBoxPreference app:title="@string/info_title"
            app:key="info"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/version_header">

        <Preference app:title="@string/version_title"
            app:key="version"
            app:summary="1.0"/>

    </PreferenceCategory>

</PreferenceScreen>
